Simplified TileCollisions, added dependency on StreamEx